--- a/index.html
+++ b/index.html
@@ -1,7 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Magdalena Trzcińska</title>
+
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <header class="vh-100 pl-3 pr-3">
+        <nav class="nav justify-content-end align-items-end">
+            <a class="nav-link mr-auto logo" href="#">MT</a>
+            <a class="nav-link" href="#skills">Skills</a>
+            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#experience">Experience</a>
+            <a class="nav-link" href="#contact">Contact</a>
+        </nav>
+
+        <div class="header__text d-flex flex-column text-center justify-content-center align-items-center">
+                <h1>Magdalena Trzcińska</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos labore cum vero excepturi magnam nam pariatur neque nisi quidem quibusdam quas dolor iure est odit hic officiis, suscipit fugiat nobis!
+                    <!--I am a student of computer science, at the beginning of my professional path. I like new challenges that will allow me to expand my knowledge.--></p>            
+                <div class="header__text--social mb-2">
+                    <a href="https://www.linkedin.com/in/magdalena-trzci%C5%84ska-268873208/" target="_blank"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+                    <a href="#"><i class="fa-brands fa-github"></i>GitHub</a>
+                </div>
+    
+                <button class="btn btn--cv" type="submit" onclick="window.open('header.jpg')">Download CV</button>
+        </div>
+    </header>
+
+    <article class="container-fluid justify-content-around text-center p-5">
+        <h2>Skills</h2>
+        <div class="row justify-content-around mt-3">
+            <!--<h6>Soft skills</h6>-->
+            <div class="col-3 border">
+                aaa
+            </div>
+            <div class="col-3 border">
+                aaa
+            </div>
+            <div class="col-3 border">
+                aaa
+            </div>
+        </div>
+    </article>
+    
 </body>
 </html>
